extends Control
class_name TutorialOverlay

@onready var text_anim: AnimationPlayer = $TextAnim
@onready var cow_anim: AnimationPlayer = $CowAnim


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
